// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state 1`] = `
[
  {
    "id": "red_parrit_id",
    "name": "red_parrit",
    "pairing_board_id": "red_id",
    "project_id": "20232",
    "type": "Person",
  },
  {
    "id": "absent",
    "name": "Permanent Vacation",
    "pairing_board_id": "exempt",
    "project_id": "20232",
    "type": "Person",
  },
  {
    "id": "floater_id",
    "name": "floater_name_start",
    "pairing_board_id": "-1",
    "project_id": "20232",
    "type": "Person",
  },
]
`;

exports[`initial state 2`] = `
[
  {
    "id": "red_parrit_id",
    "name": "red_parrit",
    "pairing_board_id": "red_id",
    "project_id": "20232",
    "type": "Person",
  },
]
`;
